# credit-risk-analytics-portfolio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
docs/: model_cards.md  model_validation_report.md
reports/: model_summary.md  risk_committee_memo.md
sql/: 01_vintage_analysis.sql  02_delinquency_roll_rates.sql  03_cohort_default_rates.sql  04_chargeoff_loss_curves.sql  05_utilization_trends.sql  06_exposure_concentration.sql  07_stage_migration.sql  08_watchlist_extraction.sql  09_ecl_aggregation.sql  README.md  schema.sql
src/credit_risk/: __init__.py  config.py  data_generation.py  early_warning.py  ecl_engine.py  lgd_model.py  pd_model.py  plotting.py  report.py  stress_testing.py  utils.py
tests/: conftest.py  test_data_generation.py  test_ecl_engine.py  test_models_smoke.py  test_stress_testing.py
