[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-analytics-portfolio"
version = "0.1.0"
description = "Portfolio of credit/risk analytics models: PD, LGD, ECL, stress testing, early warning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James Witherington" }]
keywords = ["credit-risk", "ifrs9", "cecl", "ecl", "stress-testing", "pd", "lgd"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
